edit link to open in new tab

--- a/ReactionGame.html
+++ b/ReactionGame.html
@@ -76,7 +76,7 @@
     <p id="intro" class="intro-text">Reaction time test. Click on the circle when it appears on the screen as fast as you can! Final result will be the average of 10 times.</p>
     <p id="gameover" class="gameover-text">Game over!</p>
     <p id="results" class="result-text"></p>
-    <p id="info" class="info-text">Read more on scientific study of reaction time <a href="https://en.wikipedia.org/wiki/Mental_chronometry">here</a></p>
+    <p id="info" class="info-text">Read more on scientific study of reaction time <a href="https://en.wikipedia.org/wiki/Mental_chronometry" target="_blank">here</a></p>
     <div id="circle" class="center" onclick="clickCircle()">
     </div>
     <button id="start" class="button" onclick="startGame()">Start</button>
